--- a/evernote-sdk-android-master/demo/src/main/AndroidManifest.xml
+++ b/evernote-sdk-android-master/demo/src/main/AndroidManifest.xml
@@ -1,46 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="com.evernote.android.demo"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.evernote.android.demo" >
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:name=".DemoApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name">
-
+        android:label="@string/app_name" >
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Demo.Translucent">
+            android:theme="@style/Theme.Demo.Translucent" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.UserInfoActivity"
             android:label="@string/user_info"
-            android:theme="@style/Theme.Demo"/>
-
+            android:theme="@style/Theme.Demo" />
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/label_login"
-            android:theme="@style/Theme.Demo"/>
-
+            android:theme="@style/Theme.Demo" />
         <activity
             android:name=".activity.NotesActivity"
-            android:theme="@style/Theme.Demo"/>
-
+            android:theme="@style/Theme.Demo" />
         <activity
             android:name=".activity.ViewHtmlActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/Theme.Demo"/>
-
+            android:theme="@style/Theme.Demo" />
         <activity android:name="com.evernote.client.android.EvernoteOAuthActivity" />
-        <activity android:name="com.evernote.client.android.login.EvernoteLoginActivity"/>
+        <activity android:name="com.evernote.client.android.login.EvernoteLoginActivity" />
+        <activity
+            android:name=".activity.BQ_LoginActivity"
+            android:label="@string/title_activity_bq__login"
+            android:theme="@style/Theme.Demo">
+        </activity>
     </application>
+
 </manifest>
